<resources>
    <string name="app_name">Fopus</string>
    <string name="login_title">Вход</string>
    <string name="email">Введите email</string>
    <string name="login_password">Введите пароль</string>
    <string name="login_agree">Входить автоматически</string>
    <string name="login_btn">ВОЙТИ</string>
    <string name="reg_title">Регистрация</string>
    <string name="reg_tab_1">По номеру</string>
    <string name="reg_tab_2">По email</string>
    <string name="separator">|</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="reg_btn">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="reg_phone">Введите телефон</string>
    <string name="login_email">Введите Email/Телефон</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_name">Phone Name</string>
    <string name="phone_price">Price:</string>
    <string name="phone_launch_date">Launch Date:</string>
    <string name="phone_camera_score">Camera Score:</string>
</resources>