<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reg_title"
            android:textColor="#6d5a7f"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:paddingHorizontal="50dp">

            <TextView
                android:id="@+id/tabPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reg_tab_1"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                android:textColor="#7C7B7B"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tabEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reg_tab_2"
                android:textAlignment="center"
                android:textColor="#6d5a7f"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/border_and_radius"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:textColor="#000000"
                android:textColorHint="#7C7B7B"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_and_radius"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:textColor="#000000"
                android:textColorHint="#7C7B7B"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordRepeatInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_and_radius"
                android:hint="@string/password_repeat"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:textColor="#000000"
                android:textColorHint="#7C7B7B"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/errorBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"
                android:textColor="#ff0000"
                />


            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/custom_btn"
                android:enabled="true"
                android:text="@string/reg_btn" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>